--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 达沃斯存在一天人类都不安全（二）
+title: 达沃斯私下讨论喜币
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1928295/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1928447/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
