--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,7 +1,7 @@
 ---
-title: 达沃斯就是玩小孩的一帮垃圾
+title: 要找病毒疫苗源头就找达沃斯
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1928349/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1928488/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
