--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,7 +1,7 @@
 ---
-title: 房地产的溢出效应
+title: 从达沃斯看到邪恶的死亡
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1928404/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1928513/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
