--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 后面还有多少个巴森姆？美国司法的腐败
+title: 会看2017年伪类案件（2）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1930624/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1930712/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
