--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 美国政界司法界都牵扯到（2）
+title: 七哥小时候的照片
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1930698/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1930745/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
