--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 人间就有鬼神人不生不灭（1）
+title: 这个案子涉及到80多个律师
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1930800/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1930849/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
