--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 誓死战斗到底绝不放弃
+title: 灭共是多么伟大多么幸福
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1930717/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1930780/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
