--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 共产主义来自哪里
+title: 大觉醒时刻
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1930904/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931020/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
