--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 大觉醒时刻
+title: 习近平说脱钩，王岐山就是魔鬼
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931020/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931224/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
