--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 新中国联邦的信仰，共产主义的信仰
+title: 达沃斯还会有的
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1930916/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931084/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
