--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 这个案子的目的
+title: 马丁路德金是我们的榜样
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1930912/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931083/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
