--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党是沼泽地的魔鬼
+title: 我们要创造绝对的财富系统
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1930971/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931158/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
