--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 达沃斯还会有的
+title: 我们要创造绝对的财富系统（二）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931084/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931182/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
