--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 我们要创造绝对的财富系统（二）
+title: 习怕什么，加息
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931182/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931279/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
