--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 习近平说脱钩就是穷途末路，孙立军是自己会解放
+title: 七哥爆料人类疫苗灾难今年五月开始
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931242/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931288/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
