--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 习近平说脱钩，王岐山就是魔鬼
+title: 习就是困兽，七哥第一个说脱钩、中资股
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931224/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931268/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
