--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党脱钩就是脱控
+title: 习近平说脱钩就是穷途末路，孙立军是自己会解放
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931196/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931242/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
