--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 习就是困兽，七哥第一个说脱钩、中资股
+title: 习怕什么，加息
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931268/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931279/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
