--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,7 +1,7 @@
 ---
-title: 怎么能让孩子打疫苗
+title: 中国人被共产党给弄成了一个完全非正常人类
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931888/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931926/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
