--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,7 +1,7 @@
 ---
-title: 觉醒
+title: 香草山农场2022年新年晚会开场
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1932442/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1932445/)
 
 制作：香草山视频部
 
