--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,7 +1,7 @@
 ---
-title: 香草山农场战友2022年新年祝福
+title: 甜蜜蜜
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1932443/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1932446/)
 
 制作：香草山视频部
 
