--- a/gnews/36.md
+++ b/gnews/36.md
@@ -1,7 +1,7 @@
 ---
-title: 甜蜜蜜
+title: 功夫
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1932446/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1932447/)
 
 制作：香草山视频部
 
