--- a/gnews/39.md
+++ b/gnews/39.md
@@ -1,7 +1,7 @@
 ---
-title: 香草山农场2022年新年晚会开场
+title: 甜蜜蜜
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1932445/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1932446/)
 
 制作：香草山视频部
 
