--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党希望我们六周忘记所有事情,我们不应该忘记!
+title: 全世界的股市都是虚假的,中共房地产是骗老百姓钱的
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1933730/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1933820/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
