--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,7 +1,7 @@
 ---
-title: 历史上的音乐教程
+title: 从我是音雄看GTV的音乐发展
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1933690/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1933719/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
