--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,9 +1,9 @@
 ---
-title: 2022.1.24疫苗灾难
+title: 2022.1.22疫苗灾难
 ---
-`【去疫前线】` [轉載自GNews](https://gnews.org/zh-hans/1934645/)
+`【去疫前线】` [轉載自GNews](https://gnews.org/zh-hans/1934667/)
 
-**⚠️我们不反疫苗，只针对假疫苗**
+**⚠️****我们不反疫苗，只针对假疫苗**
 
 **⚠️我们不反科学，只针对反人类**
 
