--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,7 +1,7 @@
 ---
-title: 被人利用最可怕
+title: 美国高院停止企业强制疫苗令
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1935358/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1935386/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
