--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 法律与行政命令
+title: 未来会证明新中国联邦有多伟大
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1935424/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1935508/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
