--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,7 +1,7 @@
 ---
-title: 记住必须戴口罩
+title: 共产党灭亡前的灾难到来
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1935518/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1935573/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
