--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,7 +1,7 @@
 ---
-title: 法律与行政命令
+title: 什么是中共的零容忍
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1935424/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1935477/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
