--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,7 +1,7 @@
 ---
-title: 记住必须戴口罩
+title: 喜币受多个法律管辖约束
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1935518/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1935610/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
