--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,7 +1,7 @@
 ---
-title: 喜币改变金融生态
+title: 邪教组织的6大特征
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1935685/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1935717/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
