--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 成长需要过程要面对
+title: 爆料革命不要每天到处找敌人
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1935744/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1935777/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
