--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 中国人到今天对事情的判断
+title: 不要老选择这个世界上最愚蠢的办法
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1935735/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1935751/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
