--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党制造邪说
+title: 小飞象仅4个月获得美国政治庇护的意义重大
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1935790/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1935803/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
