--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 塞浦路斯战友的事
+title: 新中国联邦已经被世界上大多数国家承认是大家的平台
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1936842/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1936886/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
