--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥让人走到前面法治社会
+title: 塞浦路斯战友的事
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1936798/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1936842/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
