--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,7 +1,7 @@
 ---
-title: 超出预想的好消息
+title: 新中国联邦想不赢都不行
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1936997/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1937017/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
