--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党正在制造排华行动
+title: 法律与行政命令
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1939948/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1939962/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
