--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 正确认识高院判决
+title: 江志成吴征付钱HBO VICE
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1939930/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1939934/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
