--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 什么是中共的零容忍
+title: 邪教组织的六大特征
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1940020/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1940037/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
