--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,7 +1,7 @@
 ---
-title: 杨贝贝事件是一盘大棋Q组织
+title: 江志成吴征付钱HBO VICE
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1939908/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1939934/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
