--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,7 +1,7 @@
 ---
-title: Q组织是共产党的阴谋
+title: 江志成吴征付钱HBO VICE
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1939916/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1939934/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
