--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,7 +1,7 @@
 ---
-title: 邪教组织的六大特征
+title: 杨贝贝把中国人定义为邪教组织
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1940037/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1940152/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
