--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,7 +1,7 @@
 ---
-title: 桥水基金对中国人的伤害
+title: 共享财富就是共产主义 就是共产到少数几个家族手里
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1940161/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1940258/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
