--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党卖国
+title: 江曾如何洗钱
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1940539/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1940769/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
