--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 美国一直想消灭独裁和后独裁国家
+title: 长线投资都在离场 数字货币领域大额洗钱正在离场
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941021/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941060/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
