--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 哈萨克斯坦是上合组织成员国及其在一带一路中重要的战略地位
+title: 中共借上合组织名义出兵哈萨克斯坦和普京打的算盘
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941032/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941040/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
