--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 美国一直想消灭独裁和后独裁国家
+title: 哈萨克斯坦是上合组织成员国及其在一带一路中重要的战略地位
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941021/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941032/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
