--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 文贵大直播“精选”
+title: 上合组织成员几乎是江家的势力
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941004/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941012/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
