--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 上合组织成员几乎是江家的势力
+title: 共产党的核糖核酸游戏
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941012/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941064/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
