--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 任何药物都不要连续服用
+title: 爆料革命最重要的是让你看真假、辩善恶
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941147/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941156/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
