--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,7 +1,7 @@
 ---
-title: 美国一直想消灭独裁和后独裁国家
+title: 中共借上合组织名义出兵哈萨克斯坦和普京打的算盘
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941021/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941040/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
