--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 上合组织成员几乎是江家的势力
+title: 美国一直想消灭独裁和后独裁国家
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941012/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941021/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
