--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,7 +1,7 @@
 ---
-title: 科学是主义不是真理 本身就是要挑战和怀疑的
+title: 共产党欺骗中国人是最大的悲哀
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941167/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941238/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
