--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: 谢利夫 外交人员骗钱
+title: 九指妖造假
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941703/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941734/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队。
 
