--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,7 +1,7 @@
 ---
-title: 宣言，和平
+title: 外交部骗习，一切都是假的
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941686/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941726/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队。
 
