--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 宣言，和平
+title: 谢里夫事情意味着什么
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941686/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941741/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队。
 
