--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,7 +1,7 @@
 ---
-title: 关掉大使馆意味着什么
+title: 谢利夫 外交人员骗钱
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941655/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941703/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队。
 
