--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,7 +1,7 @@
 ---
-title: 中共私人的冬奥会,杀狗事件西方的强烈反应
+title: 参加北京冬奥的人将列入与暴政为伍的名单
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941939/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1942040/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队。
 
