--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: 香草山农场祝大家新年快乐
+title: 以歌灭共
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1945119/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1945124/)
 
 发布：奇门遁甲
 
