--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,7 +1,7 @@
 ---
-title: 回顾G系列
+title: 全球农场
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1945121/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1945129/)
 
 发布：奇门遁甲
 
