--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 外国人无法理解共产党的恶
+title: 中共買不到光刻機
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1945511/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1945605/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
