--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 有使命谁都拉不走
+title: 中共買不到光刻機
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1945563/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1945605/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
