--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,7 +1,7 @@
 ---
-title: 大發生了什麼，鄧小平南巡
+title: 共产党的独裁政治制度没有明天
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1945623/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1945690/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
