--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,7 +1,7 @@
 ---
-title: 回顾G系列
+title: 以歌灭共
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1945121/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1945124/)
 
 发布：奇门遁甲
 
