--- a/gnews/38.md
+++ b/gnews/38.md
@@ -1,7 +1,7 @@
 ---
-title: 香草山农场祝大家新年快乐
+title: 全球农场
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1945119/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1945129/)
 
 发布：奇门遁甲
 
