--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 梵蒂冈寄来的袖扣
+title: 外国机构对春晚的研究 都是被共产党控制
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1949116/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1949210/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
