--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,7 +1,7 @@
 ---
-title: 房地产冬奥会的政治目的
+title: 喜支付系统里只有“信”和“用”
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1949725/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1949790/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
