--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,7 +1,7 @@
 ---
-title: 必须是零费用的交易
+title: 共产党种下的毒
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1950021/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1950065/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
