--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 中国人看不得中国人好
+title: 货币金融的本质是物物交换
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1950118/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1950234/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
