--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥人生大赢家
+title: Hpay有物质的地方就有Hpay
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1950129/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1950186/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
