--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,7 +1,7 @@
 ---
-title: 喜支付系统里只有“信”和“用”
+title: Hpay上线难度需要全世界认可
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1950561/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1950615/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
