--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,7 +1,7 @@
 ---
-title: Hpay上线难度需要全世界认可
+title: 这歌七哥会唱到灭了共为止（下）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1950615/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1950652/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
