--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 哈萨克斯坦的位置王毅四处挑拨
+title: 这两天世界有大动静
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1953998/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1954036/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
