--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,7 +1,7 @@
 ---
-title: 俄罗斯来哈的意义 昆仑山对七哥家的意义
+title: 这两天世界有大动静
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1954013/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1954036/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
