--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,7 +1,7 @@
 ---
-title: 新中国联邦用音乐揭发中共的虚伪和官僚欺骗
+title: 灭共的核心是要有钱、有人和掌握时机
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1954271/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1954309/)
 
 台灣寶島農場
 
