--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,7 +1,7 @@
 ---
-title: 如何推广H-pay？!
+title: 新中国联邦用音乐揭发中共的虚伪和官僚欺骗
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1954229/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1954271/)
 
 台灣寶島農場
 
